Require.js & Magento 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="container">
           <div class="jumbotron">
              <h1>All Require.js</h1>
-             <p>everything, absolutely everything, about require.js</p>
+             <p>Everything, absolutely everything, about require.js</p>
           </div>
        </div>
     </body>
