--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
              <h1>All Require.js</h1>
              <p>Everything, absolutely everything, about require.js</p>
           </div>
+           <div id="messages"></div>
        </div>
     </body>
 </html>
